[package]
name = "streamed_cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
futures = "0.3"
maplit = "1.0.2"
tokio = {version = "1.32.0", features = ["rt", "macros", "time", "sync"]}
